k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-prod
  labels:
    app.kubernetes.io/name: ticketing-system
    app.kubernetes.io/environment: prod
