k8s/prod/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "7001"
      port: 7001
      targetPort: 7001
  selector:
    io.kompose.service: auth-service
