k8s/prod/mongo-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongo-auth
  name: mongo-auth
spec:
  ports:
    - name: "29017"
      port: 29017
      targetPort: 27017
  selector:
    io.kompose.service: mongo-auth
