k8s/prod/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  ports:
    - name: "7004"
      port: 7004
      targetPort: 7004
  selector:
    io.kompose.service: notification-service
