k8s/prod/ticket-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: ticket-service
  name: ticket-service
spec:
  ports:
    - name: "7002"
      port: 7002
      targetPort: 7002
  selector:
    io.kompose.service: ticket-service
