k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 7001

          - path: /tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 7002

          - path: /support
            pathType: Prefix
            backend:
              service:
                name: support-service
                port:
                  number: 7003
